# programming-interview-code

./: .gitignore  README.md
BASICS/Groovy/: loop_list.groovy
C/: SConstruct  float.c  llist.c  max_unsigned_int.c  pointer.c
CPP/: ref1.cpp
CPP/basic/: enumclass.cpp  format-specifiers.cpp  stringmap-cpp14.cpp  stringmap.cpp
CPP/circbuffer/: CMakeLists.txt  circbuffer.hpp  circbuffer_boost.cpp  circbuffer_test.cpp
CPP/twosum/: twosum.cpp
D/: hello.d
Golang/hello/: go.mod  hello.go
Haskell/: countprimes.hs  countprimes2.hs  find_digit.hs  is_fibo.hs  sieve.hs
Java/: helloworld.java  looplist.java  loopmap.java  loops.java
Java/procexample/: pom.xml
Perl/: split_test.pl
Python/: arithser.py  basegameengine.py  bintree.py  countprimes.py  countprimes2.py  dfs.py  input-non_divisible_subset-02.txt  is_pangram.py  lcs.py  no_repeating_digits.py  non_divisible_subset.py  reverse-ver1.py  sieve.py
Python/01-sum_two_numbers/: problem.txt  sum_two_numbers-fast.py
Python/02-valid-paren/: problem.txt  valid-paren.py
Python/03-best_stock_price.py/: best_stock_price.py
Python/04-merge-sorted-array/: merge-sorted-array.py  problem.txt
Python/05-remove-duplicates/: problem.txt  remove_duplicates-using-builtins.py  remove_duplicates.py
Python/06-is-anagram/: is-anagram-optimal.py  is-anagram.py
Python/07-palindrome-number/: palindrom-number-using-string.py  palindrome-number-using-div.py  problem.txt
Python/08-remove-element/: problem.txt  (+1 more)
Scala/: countprimes.scala  countprimes2.scala  long_inc_subsequence.scala  long_inc_subsequence2.scala
(+90 files in other folders)
